# d3d11sw

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cube_render.cpp  cube_render.h  d3d9_scene_render.cpp  d3d9_scene_render.h  floor_render.cpp  floor_render.h  instanced_render.cpp  instanced_render.h  lighting_render.cpp  lighting_render.h  postprocess.mm  postprocess_render.cpp  postprocess_render.h  tessellation_render.cpp  tessellation_render.h  triangle_render.cpp  triangle_render.h
examples/macos/: cube.mm  d3d9_scene.mm  floor.mm  instanced.mm  lighting.mm  postprocess.mm  tessellation.mm  triangle.mm
examples/win32/: cube_win32.cpp  floor_win32.cpp  instanced_win32.cpp  lighting_win32.cpp  postprocess_win32.cpp  triangle_win32.cpp  win32_window.h
src/: CMakeLists.txt
src/common/: common.h  device_child_impl.h  log.cpp  log.h  macros.h  private_data.h  types.h  unknown_impl.h
src/context/: blend_util.h  context.cpp  context.h  context1.cpp  context1.h  context2.cpp  context2.h  context3.cpp  context3.h  context4.cpp  context4.h  context_util.h  depth_stencil_util.h  dispatch_executor.cpp  dispatch_executor.h  dispatcher.cpp  dispatcher.h  drawer.cpp  drawer.h  output_merger.cpp  output_merger.h  pipeline_state.cpp  pipeline_state.h  rasterizer.cpp  rasterizer.h  shader_util.h  tessellator.cpp  tessellator.h  vertex_pipeline.cpp  vertex_pipeline.h
src/core/common/: common.h  log.cpp  log.h  macros.h  private_data.h  trace.cpp  trace.h  types.h  (+1 more)
src/device/: device.cpp  device.h  device1.cpp  device1.h  device2.cpp  device2.h  device3.cpp  device3.h  device4.cpp  device4.h  device5.cpp  device5.h  device_child_impl.h
src/dxgi/: adapter.cpp  adapter.h  device.cpp  device.h  dxgi_object_impl.h  factory.cpp  factory.h  output.cpp  output.h  presenter.h  presenter_macos.mm  presenter_win32.cpp  swapchain.cpp  swapchain.h
src/exports/: d3d11sw.def  dllmain.cpp  dxgi_exports.cpp  exports.cpp
src/misc/: class_linkage.cpp  class_linkage.h  command_list.cpp  command_list.h  fence.cpp  fence.h  input_layout.cpp  input_layout.h  multithread.cpp  multithread.h  query.cpp  query.h
src/presenter/: presenter.h  presenter_macos.mm  presenter_win32.cpp
src/resources/: buffer.cpp  buffer.h  resource_sw.h  subresource_layout.h  sw_resource.h  texture1d.cpp  texture1d.h  texture2d.cpp  texture2d.h  texture3d.cpp  texture3d.h  texture_util.h
src/shaders/: compute_shader.cpp  compute_shader.h  domain_shader.cpp  domain_shader.h  dxbc.h  dxbc_parser.cpp  dxbc_parser.h  geometry_shader.cpp  geometry_shader.h  hull_shader.cpp  hull_shader.h  pixel_shader.cpp  pixel_shader.h  shader_abi.h  shader_codegen.cpp  shader_codegen.h  shader_constants.h  shader_jit.cpp  shader_jit.h  shader_runtime.h  sm4.h  sm4_decoder.cpp  sm4_decoder.h  vertex_shader.cpp  vertex_shader.h
src/states/: blend_state.cpp  blend_state.h  depth_stencil_state.cpp  depth_stencil_state.h  rasterizer_state.cpp  rasterizer_state.h  sampler_state.cpp  sampler_state.h
src/util/: align.h  bc2.h  dynamic_library.cpp  dynamic_library.h  enum.h  env.h  fixed_point.h  format.cpp  format.h  hash.h  scratch_arena.h  simd_lane.h
src/views/: depth_stencil_view.cpp  depth_stencil_view.h  render_target_view.cpp  render_target_view.h  shader_resource_view.cpp  shader_resource_view.h  unordered_access_view.cpp  unordered_access_view.h  view_util.h
tests/: CMakeLists.txt  golden_test_util.h  test_buffer.cpp  test_com.cpp  test_context_state.cpp  test_device_creation.cpp  test_dispatch.cpp  test_dxbc_parser.cpp  test_shader_codegen.cpp  test_shaders.cpp  test_states.cpp  test_texture1d.cpp  test_texture2d.cpp  test_texture3d.cpp  test_views.cpp
tests/d3d11/: CMakeLists.txt
tests/d3d9/: CMakeLists.txt
tests/golden/: golden_test_util.h  test_cs_address_modes.cpp  test_cs_append_consume.cpp  test_cs_atomic.cpp  test_cs_bc_texture.cpp  test_cs_bitwise.cpp  test_cs_cbuffer.cpp  test_cs_checkerboard.cpp  test_cs_control_flow.cpp  test_cs_dispatch_indirect.cpp  test_cs_gather.cpp  test_cs_generate_mips.cpp  test_cs_gradient.cpp  test_cs_integer_math.cpp  test_cs_kitchen_sink.cpp  test_cs_loop.cpp  test_cs_math.cpp  test_cs_multi_group.cpp  test_cs_sample_3d.cpp  test_cs_sample_cmp.cpp  test_cs_sample_cube.cpp  test_cs_sample_level.cpp  test_cs_shared_sum.cpp  test_cs_sincos.cpp  test_cs_solid_fill.cpp  test_cs_srv_structured.cpp  test_cs_structured.cpp  test_cs_switch.cpp  test_cs_texture.cpp  test_draw_blend.cpp  test_draw_blend_advanced.cpp  test_draw_combined.cpp  test_draw_cull_modes.cpp  test_draw_depth.cpp  test_draw_depth_bias.cpp  test_draw_depth_clip.cpp  test_draw_depth_funcs.cpp  test_draw_derivatives.cpp  test_draw_discard.cpp  test_draw_dual_source.cpp  (+31 more)
tests/perf/: perf_compute.cpp  perf_draw.cpp  perf_util.h
tests/shaders/: compile.sh  cs_append_consume.hlsl  cs_atomic.hlsl  cs_bitwise.hlsl  cs_checkerboard.hlsl  cs_gather.hlsl  cs_gradient.hlsl  cs_loop.hlsl  cs_sample_cmp.hlsl  cs_sincos.hlsl  cs_solid_fill.hlsl  cs_switch.hlsl  ds_color_tri.hlsl  gs_explode.hlsl  gs_instanced.hlsl  gs_passthrough.hlsl  gs_point_to_quad.hlsl  gs_rt_array.hlsl  gs_subdivide.hlsl  gs_tri_adj.hlsl  gs_viewport_select.hlsl  hs_adaptive.hlsl  hs_simple_quad.hlsl  hs_simple_tri.hlsl  hs_svpos_tri.hlsl  ps_combined_solid.hlsl  ps_derivatives.hlsl  ps_floor_autolod.hlsl  ps_floor_lod0.hlsl  ps_lighting.hlsl  ps_mrt2.hlsl  ps_per_sample.hlsl  ps_solid_color.hlsl  ps_sv_depth.hlsl  ps_textured_normal.hlsl  vs_floor.hlsl  vs_instanced.hlsl  vs_lighting.hlsl  vs_multi_cbuf.hlsl  vs_tess_grid.hlsl  (+1 more)
tests/unit/: test_buffer.cpp  test_buffer_uav.cpp  test_check_feature_support.cpp  test_clear_uav.cpp  test_context_state.cpp  test_dispatch.cpp  test_draw_indexed.cpp  test_draw_pipeline.cpp  test_dxbc_parser.cpp  test_format_packing.cpp  test_map_modes.cpp  test_query.cpp  test_resource_copies.cpp  test_shader_codegen.cpp  test_shader_jit.cpp  test_shader_runtime.cpp  test_stream_output.cpp  test_swapchain.cpp  test_texture2d.cpp  test_texture3d.cpp  test_texture_formats.cpp  test_vertex_formats.cpp  test_views.cpp
(+467 files in other folders)
